[project]
name = "tx-proj"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Harry Pierson", email = "harry.pierson@dbos.dev"},
]
dependencies = [
    "dbos>=0.4.0a0",
    # fastapi dependency workaround until https://github.com/dbos-inc/dbos-transact-py/pull/58 is merged and published
    "fastapi[standard]>=0.112.1",
]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}